--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,18 +10,13 @@
       content="A website where you can learn about the health of your skin from the best industry professionals"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-<<<<<<< HEAD
-
-=======
->>>>>>> main
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Sapien Aesthetic University</title>
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
-    />
-
+    /> 
     <link
       rel="stylesheet"
       type="text/css"
@@ -44,6 +39,7 @@
         font-size: 48px;
       }
     </style>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
