background and styling added

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,16 +32,8 @@
       rel="stylesheet"
       type="text/css"
     />
-
-    <style>
-      body {
-        font-family: "Tangerine", serif;
-        font-size: 48px;
-      }
-    </style>
-
   </head>
-  <body>
+  <body class=“d-flex flex-column min-vh-100 img js-fullheight” style="background-image: url(https://t3.ftcdn.net/jpg/05/37/17/24/360_F_537172411_C4GmfD6cpU7mrra2CYzyYUL34w3Bk1mN.jpg);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
 
